fix UI alignment

--- a/web-components/chatbots-select-personality-page/chatbots-select-personality-page.css
+++ b/web-components/chatbots-select-personality-page/chatbots-select-personality-page.css
@@ -12,18 +12,19 @@
     opacity: 1;
 }
 .chatbots-header{
-    padding: 15px 15px 15px 25px;
-    font-weight: 700;
+    padding: 20px 40px;
+    font-weight: 600;
     font-size: 28px;
     color:  var(--left-sidebar);
     box-shadow: 0 2px 4px 0 var(--chatbots-shadow);
 }
 .choose-personality{
-    padding: 25px 25px 0 25px;
+    padding: 25px 25px 0 40px;
     font-size: 20px;
     font-weight: 600;
 }
 .table{
+    padding: 0 15px;
     display: grid;
     grid-template-columns: repeat(9, 1fr);
     grid-template-rows: repeat(9, 1fr);
